update: update user service
