# qbook-social-media-node-js/src/router/user.routes.ts
@@ -7,6 +7,11 @@ const userRouter = Router();
 
 userRouter.get('/me', authMiddleware, wrapAsync(userController.getMe));
 userRouter.get('/profile/:id', wrapAsync(userController.getProfile));
+userRouter.get(
+    '/suggest',
+    authMiddleware,
+    wrapAsync(userController.getSuggestions)
+);
 userRouter.get('/search', wrapAsync(userController.searchUser));
 userRouter.patch(
     '/profile',
